--- a/index.html
+++ b/index.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>top</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
+  <title>top</title>
 </head>
+
 <body>
-    <div id="container">
-        <header>
-            <h1>top</h1>
-        </header>
-        <nav>
-            <ul>
-                <li><a href="#">top</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">gallery</a></li>
-                <li><a href="#">links</a></li>
-            </ul>
-        </nav>
-        <main>
-            <section>
-                <article> alice in wonderland </article>
-                <article> article 02 </article>
-            </section>
-            <aside> aside </aside>
-        </main>
-        <footer> &copy; http://www.example.com </footer>
-    </div>
+  <div id="container">
+    <header>
+      <h1>top</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="#">top</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="#">gallery</a></li>
+        <li><a href="#">links</a></li>
+      </ul>
+    </nav>
+    <main>
+      <section>
+        <article>
+          <h1>注文の多い料理店(宮沢賢治)</h1>
+          <h4>二人の若い紳士</h4>
+          <P>
+            二人の若い紳士が、すっかりイギリスの兵隊のかたちをして、ぴかぴかする鉄砲をかついで、白熊のような犬を二疋ひきつれて、だいぶ山奥の、木の葉のかさかさしたとこを、こんなことを云いいながら、あるいておりました。
+          </P>
+          <h4>山奥の料理店</h4>
+          <P>
+            「どうも腹が空いた。さっきから横っ腹が痛くてたまらないんだ。」「ぼくもそうだ。もうあんまりあるきたくないな。」「あるきたくないよ。ああ困ったなあ、何かたべたいなあ。」「喰たべたいもんだなあ」<br>
+            二人の紳士は、ざわざわ鳴るすすきの中で、こんなことを云いました。その時ふとうしろを見ますと、立派な一軒の西洋造りの家がありました。<br>
+          </P>
+        </article>
+        <article>
+          <h1>西洋料理店「山猫軒」</h1>
+          <h4>玄関の札</h4>
+          <ul>
+            <li>RESTAURANT</li>
+            <li>西洋料理店</li>
+            <li>WILDCAT HOUSE</li>
+            <li>山猫軒</li>
+          </ul>
+          <h4>当軒は注文の多い料理店ですからどうかそこはご承知ください</h4>
+          <ol>
+            <li>髪をきちんとして、それからはきものの泥を落してください。</li>
+            <li>外套と靴をおとり下さい。</li>
+            <li>壺のなかのクリームを顔や手足にすっかり塗ってください。</li>
+            <li>あなたの頭に瓶の中の香水をよく振りかけてください。</li>
+            <li>からだ中に、壺の中の塩をたくさん、よくもみ込んでください。</li>
+            <li>わざわざご苦労です。大へん結構にできました。<br>さあさあおなかにおはいりください。</li>
+          </ol>
+        </article>
+      </section>
+      <aside>
+        <h1>関連リンク</h1>
+        <ul>
+          <li><a href="https://ja.wikipedia.org/wiki/%E5%AE%AE%E6%B2%A2%E8%B3%A2%E6%B2%BB">宮沢賢治</a></li>
+          <li><a href="https://www.aozora.gr.jp/cards/000081/files/43754_17659.html">青空文庫</a></li>
+        </ul>
+      </aside>
+    </main>
+    <footer> &copy; http://www.example.com </footer>
+  </div>
 </body>
+
 </html>
