--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
           <h1>注文の多い料理店(宮沢賢治)</h1>
           <h4>二人の若い紳士</h4>
           <P>
-            二人の若い紳士が、すっかりイギリスの兵隊のかたちをして、ぴかぴかする鉄砲をかついで、白熊のような犬を二疋ひきつれて、だいぶ山奥の、木の葉のかさかさしたとこを、こんなことを云いいながら、あるいておりました。
+            二人の若い紳士が、すっかりイギリスの兵隊のかたちをして、ぴかぴかする鉄砲をかついで、白熊のような犬を二匹つれて、だいぶ山奥の、木の葉のかさかさしたとこを、こんなことを云いいながら、あるいておりました。
           </P>
           <h4>山奥の料理店</h4>
           <P>
-            「どうも腹が空いた。さっきから横っ腹が痛くてたまらないんだ。」「ぼくもそうだ。もうあんまりあるきたくないな。」「あるきたくないよ。ああ困ったなあ、何かたべたいなあ。」「喰たべたいもんだなあ」<br>
+            「どうも腹が空いた。さっきから横っ腹が痛くてたまらないんだ。」<br>
+            「ぼくもそうだ。もうあんまりあるきたくないな。」<br>
+            「あるきたくないよ。ああ困ったなあ、何かたべたいなあ。」<br>
+            「喰たべたいもんだなあ」<br>
             二人の紳士は、ざわざわ鳴るすすきの中で、こんなことを云いました。その時ふとうしろを見ますと、立派な一軒の西洋造りの家がありました。<br>
           </P>
         </article>
@@ -53,6 +56,48 @@
             <li>わざわざご苦労です。大へん結構にできました。<br>さあさあおなかにおはいりください。</li>
           </ol>
         </article>
+        <article>
+          <h1>紙芝居</h1>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/JUs1akr-9Ro" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </article>
+        <article>
+          <h1>Sample Image</h1>
+          <img src="images/seiyoukaoku.jpg" width="480" alt="サンプル">
+          <img src="images/cat.jpg" width="480" alt="サンプル">
+          <img src="images/dokusho.jpg" width="480" alt="サンプル">
+        </article>
+        <article>
+          <h1>MEMU</h1>
+          <table border="1" rules="all">
+            <thead>
+              <tr>
+                <th>料理</th>
+                <th>価格</th>
+              </tr>
+            </thead>
+            <tfoot>
+              <tr>
+                <td>じっくり煮込んだビーフシチュー</td>
+                <td>1200円</td>
+              </tr>
+            </tfoot>
+            <tbody>
+              <tr>
+                <td>新鮮なローストチキン</td>
+                <td>780円</td>
+              </tr>
+              <tr>
+                <td>出来立てポークサンド</td>
+                <td>650円</td>
+              </tr>
+            </tbody>
+          </table>
+        </article>
+        <article><h1>検索フォーム by Google</h1>
+<form action="http://www.google.com/search" method="get">
+  <label >帰り方をしらべる: </label>
+  <input type="search" name="q">
+</form></article>
       </section>
       <aside>
         <h1>関連リンク</h1>
