--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="https://github.com/Airis-site/SampleSite/blob/master/style.css" href="style.css">
+  <link rel="stylesheet" href="style.css">
   <title>top</title>
 </head>
 
