--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         </article>
         <article>
           <h1>紙芝居</h1>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/JUs1akr-9Ro" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </article>
+           <div class="youtube"><iframe width="560" height="315" src="https://www.youtube.com/embed/JUs1akr-9Ro" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </article> </div>
         <article>
           <h1>Sample Image</h1>
-          <img src="images/seiyoukaoku.jpg" width="480" alt="サンプル">
-          <img src="images/cat.jpg" width="480" alt="サンプル">
-          <img src="images/dokusho.jpg" width="480" alt="サンプル">
+          <img src="images/seiyoukaoku.jpg" alt="サンプル">
+          <img src="images/cat.jpg" alt="サンプル">
+          <img src="images/dokusho.jpg" alt="サンプル">
         </article>
         <article>
           <h1>MEMU</h1>
