--- a/index.html
+++ b/index.html
@@ -58,56 +58,58 @@
         </article>
         <article>
           <h1>紙芝居</h1>
-           <div class="youtube"><iframe width="560" height="315" src="https://www.youtube.com/embed/JUs1akr-9Ro" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </article> </div>
-        <article>
-          <h1>Sample Image</h1>
-          <img src="images/seiyoukaoku.jpg" alt="サンプル">
-          <img src="images/cat.jpg" alt="サンプル">
-          <img src="images/dokusho.jpg" alt="サンプル">
+          <div class="youtube"><iframe width="560" height="315" src="https://www.youtube.com/embed/JUs1akr-9Ro" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </article>
-        <article>
-          <h1>MEMU</h1>
-          <table border="1" rules="all">
-            <thead>
-              <tr>
-                <th>料理</th>
-                <th>価格</th>
-              </tr>
-            </thead>
-            <tfoot>
-              <tr>
-                <td>じっくり煮込んだビーフシチュー</td>
-                <td>1200円</td>
-              </tr>
-            </tfoot>
-            <tbody>
-              <tr>
-                <td>新鮮なローストチキン</td>
-                <td>780円</td>
-              </tr>
-              <tr>
-                <td>出来立てポークサンド</td>
-                <td>650円</td>
-              </tr>
-            </tbody>
-          </table>
-        </article>
-        <article><h1>検索フォーム by Google</h1>
-<form action="http://www.google.com/search" method="get">
-  <label >帰り方をしらべる: </label>
-  <input type="search" name="q">
-</form></article>
-      </section>
-      <aside>
-        <h1>関連リンク</h1>
-        <ul>
-          <li><a href="https://ja.wikipedia.org/wiki/%E5%AE%AE%E6%B2%A2%E8%B3%A2%E6%B2%BB">宮沢賢治</a></li>
-          <li><a href="https://www.aozora.gr.jp/cards/000081/files/43754_17659.html">青空文庫</a></li>
-        </ul>
-      </aside>
-    </main>
-    <footer> &copy; http://www.example.com </footer>
+  <article>
+    <h1>Sample Image</h1>
+    <img src="images/seiyoukaoku.jpg" alt="サンプル">
+    <img src="images/cat.jpg" alt="サンプル">
+    <img src="images/dokusho.jpg" alt="サンプル">
+  </article>
+  <article>
+    <h1>MEMU</h1>
+    <table border="1" rules="all">
+      <thead>
+        <tr>
+          <th>料理</th>
+          <th>価格</th>
+        </tr>
+      </thead>
+      <tfoot>
+        <tr>
+          <td>じっくり煮込んだビーフシチュー</td>
+          <td>1200円</td>
+        </tr>
+      </tfoot>
+      <tbody>
+        <tr>
+          <td>新鮮なローストチキン</td>
+          <td>780円</td>
+        </tr>
+        <tr>
+          <td>出来立てポークサンド</td>
+          <td>650円</td>
+        </tr>
+      </tbody>
+    </table>
+  </article>
+  <article>
+    <h1>検索フォーム by Google</h1>
+    <form action="http://www.google.com/search" method="get">
+      <label>帰り方をしらべる: </label>
+      <input type="search" name="q">
+    </form>
+  </article>
+  </section>
+  <aside>
+    <h1>関連リンク</h1>
+    <ul>
+      <li><a href="https://ja.wikipedia.org/wiki/%E5%AE%AE%E6%B2%A2%E8%B3%A2%E6%B2%BB">宮沢賢治</a></li>
+      <li><a href="https://www.aozora.gr.jp/cards/000081/files/43754_17659.html">青空文庫</a></li>
+    </ul>
+  </aside>
+  </main>
+  <footer> &copy; http://www.example.com </footer>
   </div>
 </body>
 
